// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test col in row 1`] = `
"<div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap;">
  <div class="smy-col smy-col--span-8 smy-col--offset-4" style="padding-left: 0px; padding-right: 0px;">1</div>
  <div class="smy-col smy-col--span-12" style="padding-left: 0px; padding-right: 0px;">2</div>
</div>"
`;

exports[`test col in row 2`] = `
"<div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap;">
  <div class="smy-col smy-col--span-12" style="padding-left: 0px; padding-right: 0px;">1</div>
  <div class="smy-col smy-col--span-12" style="padding-left: 0px; padding-right: 0px;">2</div>
</div>"
`;

exports[`test row example 1`] = `
"<div class="layout-example">
  <div class="app-demo-title">栅格系统</div>
  <div class="demo-item">
    <div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap;">
      <div class="flex-item smy-col smy-col--span-24" style="padding-left: 0px; padding-right: 0px;">span:24</div>
    </div>
    <div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap;">
      <div class="flex-item smy-col smy-col--span-12" style="padding-left: 0px; padding-right: 0px;">span:12</div>
      <div class="flex-item smy-col smy-col--span-12" style="padding-left: 0px; padding-right: 0px;">span:12</div>
    </div>
    <div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap;">
      <div class="flex-item smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">span:8</div>
      <div class="flex-item flex-item--light smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">span:8</div>
      <div class="flex-item smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">span:8</div>
    </div>
    <div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap;">
      <div class="flex-item smy-col smy-col--span-6" style="padding-left: 0px; padding-right: 0px;">span:6</div>
      <div class="flex-item flex-item--light smy-col smy-col--span-6" style="padding-left: 0px; padding-right: 0px;">span:6</div>
      <div class="flex-item smy-col smy-col--span-6" style="padding-left: 0px; padding-right: 0px;">span:6</div>
      <div class="flex-item smy-col smy-col--span-6" style="padding-left: 0px; padding-right: 0px;">span:6</div>
    </div>
  </div>
  <div class="app-demo-title">偏移</div>
  <div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: wrap;">
    <div class="smy-col smy-col--span-16 smy-col--offset-8" style="padding-left: 0px; padding-right: 0px;">
      <div class="flex-item">span:8</div>
    </div>
    <div class="smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">
      <div class="flex-item flex-item--light">span:8</div>
    </div>
    <div class="smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">
      <div class="flex-item">span:8</div>
    </div>
  </div>
  <div class="app-demo-title">对齐</div>
  <div class="demo-item">
    <div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap;">
      <div class="smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">
        <div class="flex-item">span:8</div>
      </div>
      <div class="smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">
        <div class="flex-item">span:8</div>
      </div>
    </div>
    <div class="smy-row smy--flex smy--box" style="justify-content: center; align-items: flex-start; flex-wrap: nowrap;">
      <div class="smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">
        <div class="flex-item">span:8</div>
      </div>
      <div class="smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">
        <div class="flex-item">span:8</div>
      </div>
    </div>
  </div>
  <div class="app-demo-title">分栏间隔</div>
  <div class="smy-row smy--flex smy--box" style="align-items: flex-start; margin: 0px -5px; flex-wrap: nowrap;">
    <div class="smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">
      <div class="flex-item">span:8</div>
    </div>
    <div class="smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">
      <div class="flex-item flex-item--light">span:8</div>
    </div>
    <div class="smy-col smy-col--span-8" style="padding-left: 0px; padding-right: 0px;">
      <div class="flex-item">span:8</div>
    </div>
  </div>
</div>"
`;

exports[`test row flex 1`] = `"<div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap; justify-content: flex-start;"></div>"`;

exports[`test row flex 2`] = `"<div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap; justify-content: flex-end;"></div>"`;

exports[`test row flex 3`] = `"<div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap; justify-content: center;"></div>"`;

exports[`test row flex 4`] = `"<div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap; justify-content: space-between;"></div>"`;

exports[`test row flex 5`] = `"<div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap; justify-content: space-around;"></div>"`;

exports[`test row flex 6`] = `"<div class="smy-row smy--flex smy--box" style="align-items: flex-start; flex-wrap: nowrap; justify-content: space-around;"></div>"`;

exports[`test row flex 7`] = `"<div class="smy-row smy--flex smy--box" style="align-items: flex-end; flex-wrap: nowrap; justify-content: space-around;"></div>"`;

exports[`test row flex 8`] = `"<div class="smy-row smy--flex smy--box" style="align-items: center; flex-wrap: nowrap; justify-content: space-around;"></div>"`;
